tf-infra/prd/manifestos-k8s/env/prd/app/sathd-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sathd-web
  name: ingress-sathd-web
  annotations:
    alb.ingress.kubernetes.io/tags: Name=prd-nginx
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:379445081719:certificate/1c170a60-76da-4e23-ad36-e50c71b21116,arn:aws:acm:us-east-1:379445081719:certificate/ab58055e-530b-47d9-9f5c-7252f3ce4729"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-sathd-web
              port:
                number: 80
